login & signup form logic

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="./styles/common/common.min.css">
     <link rel="stylesheet" href="./styles/index/index.min.css">
 
+    <script src="./script.js" defer></script>
+
     <title>Bug Tracker • Home</title>
 </head>
 <body>
