--- a/login.html
+++ b/login.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="./styles/common/common.min.css">
     <link rel="stylesheet" href="./styles/loginSignup/loginSignup.min.css">
 
-    
+    <link rel="icon" type="image/x-icon" href="./media/icons/bug.ico">
+
+    <script src="./scripts/login.js" defer></script>
 
     <title>Bug Tracker • Login</title>
 </head>
@@ -31,7 +33,5 @@
     </form>
     
 </body>
-
-<script src="./script.js" defer></script>
 
 </html>
