--- a/signup.html
+++ b/signup.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="./styles/common/common.min.css">
     <link rel="stylesheet" href="./styles/loginSignup/loginSignup.min.css">
 
-    <script src="./script.js" defer></script>
+    <link rel="icon" type="image/x-icon" href="./media/icons/bug.ico">
+
+    <script src="./scripts/signup.js" defer></script>
 
     <title>Bug Tracker • Signup</title>
 </head>
