--- a/index.html
+++ b/index.html
@@ -17,14 +17,25 @@
     <header class="header">
 
         <div class="headerTitle">
-            <img src="./media/icons/bug.ico" alt="bug tracker logo">
+            <img src="./media/icons/bug.ico" alt="bug tracker logo" width="32px">
             <p>Bug Tracker</p>
         </div>
 
         <ul class="headerActions">
-            <button class="actionButton CompleteListFilter">Liste complète</button>
-            <button class="actionButton treatListFilter">À traiter</button>
-            <button class="actionButtonTwo add">Ajouter</button>
+            <button class="actionButton completeListFilter">
+                <p>Liste complète</p>
+                <span>All</span>
+            </button>
+
+            <button class="actionButton treatListFilter">
+                <p>À traiter</p>
+                <span>ToDo</span>
+            </button>
+
+            <button class="actionButtonTwo addButton">
+                <img src="./media/icons/plus.png" alt="plus / add icon" width="24px">
+                <p>Ajouter</p>
+            </button>
 
         </ul>
 
@@ -35,7 +46,7 @@
 
             <li class="uncompleted">
                 <p>8</p>
-                <img src="./media/icons/unchecked.png" alt="uncompleted icon" width="16px">
+                <img src="./media/icons/bug-32.ico" alt="uncompleted icon" width="18px">
             </li>
 
             <li class="InProgress">
@@ -81,7 +92,54 @@
                         </select>
                     </td>
                     <td class="tableUnitDelete">
-                        <button class="actionButtonTwo deleteButton">Supprimer</button>
+                        <button class="actionButtonTwo deleteButton"> 
+                            <img src="./media/icons/cross.png" alt="cross delete icon" width="12px">
+                            <p>Supprimer</p>
+                        </button>
+                    </td>
+                </tr>
+
+                <tr class="tableUnit">
+                    <td class="tableUnitDesc">
+                        <p class="tableUnitDescTitle">Title</p>
+                        <p class="tableUnitDescDesc">Description</p>
+                    </td>
+                    <td class="tableUnitDate">date</td>
+                    <td class="tableUnitName">developer</td>
+                    <td class="tableunitState">
+                        <select name="state" id="stateList">
+                            <option value="À traiter">À traiter</option>
+                            <option value="En cours">En cours</option>
+                            <option value="Terminé">Terminé</option>
+                        </select>
+                    </td>
+                    <td class="tableUnitDelete">
+                        <button class="actionButtonTwo deleteButton">
+                            <img src="./media/icons/cross.png" alt="cross delete icon" width="12px">
+                            <p>Supprimer</p>
+                        </button>
+                    </td>
+                </tr>
+
+                <tr class="tableUnit">
+                    <td class="tableUnitDesc">
+                        <p class="tableUnitDescTitle">Title</p>
+                        <p class="tableUnitDescDesc">Description</p>
+                    </td>
+                    <td class="tableUnitDate">date</td>
+                    <td class="tableUnitName">developer</td>
+                    <td class="tableunitState">
+                        <select name="state" id="stateList">
+                            <option value="À traiter">À traiter</option>
+                            <option value="En cours">En cours</option>
+                            <option value="Terminé">Terminé</option>
+                        </select>
+                    </td>
+                    <td class="tableUnitDelete">
+                        <button class="actionButtonTwo deleteButton">
+                            <img src="./media/icons/cross.png" alt="cross delete icon" width="12px">
+                            <p>Supprimer</p>
+                        </button>
                     </td>
                 </tr>
                 
