end authentification functions

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 
     <link rel="icon" type="image/x-icon" href="./media/icons/bug.ico">
 
+    <script src="./scripts/checkStatus.js"></script>
+
     <title>Bug Tracker • Home</title>
 </head>
 <body>
