--- a/login.html
+++ b/login.html
@@ -25,8 +25,10 @@
         <label for="authFormPasswordLog">Mot de passe</label>
         <input type="password" name="password" id="authFormPasswordLog" autocomplete="off">
 
+        <div class="errorCtn"></div>
+
         <label for="loginSubmit"></label>
-        <input class="actionButton authButton loginBtn" type="submit" value="Connexion" id="loginSubmit">
+        <input class="actionButtonTwo loginBtn" type="submit" value="Connexion" id="loginSubmit">
         
         <a class="goToSignupLogin" href="signup.html">Inscription</a>
 
