logout function & user token verification

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <link rel="icon" type="image/x-icon" href="./media/icons/bug.ico">
 
-    <script src="./scripts/checkStatus.js"></script>
+    <script src="./scripts/index.js" defer></script>
 
     <title>Bug Tracker • Home</title>
 </head>
@@ -35,10 +35,13 @@
             </button>
 
             <button class="actionButtonTwo addButton">
-                <img src="./media/icons/plus.png" alt="plus / add icon" width="24px">
+                <img src="./media/icons/plus.png" alt="plus / add icon" width="16px">
                 <p>Ajouter</p>
             </button>
 
+            <button class="logoutBtn">
+                <img src="./media/icons/logout.png" alt="logout icon" width="32px">
+            </button>
         </ul>
 
     </header>    
