start to display bugs

--- a/index.html
+++ b/index.html
@@ -80,75 +80,7 @@
                 </tr>
             </thead>
 
-            <tbody>
-                <!--Placeholder-->
-                <tr class="tableUnit">
-                    <td class="tableUnitDesc">
-                        <p class="tableUnitDescTitle">Title</p>
-                        <p class="tableUnitDescDesc">Description</p>
-                    </td>
-                    <td class="tableUnitDate">date</td>
-                    <td class="tableUnitName">developer</td>
-                    <td class="tableunitState">
-                        <select name="state" id="stateList">
-                            <option value="À traiter">À traiter</option>
-                            <option value="En cours">En cours</option>
-                            <option value="Terminé">Terminé</option>
-                        </select>
-                    </td>
-                    <td class="tableUnitDelete">
-                        <button class="actionButtonTwo deleteButton"> 
-                            <img src="./media/icons/cross.png" alt="cross delete icon" width="12px">
-                            <p>Supprimer</p>
-                        </button>
-                    </td>
-                </tr>
-
-                <tr class="tableUnit">
-                    <td class="tableUnitDesc">
-                        <p class="tableUnitDescTitle">Title</p>
-                        <p class="tableUnitDescDesc">Description</p>
-                    </td>
-                    <td class="tableUnitDate">date</td>
-                    <td class="tableUnitName">developer</td>
-                    <td class="tableunitState">
-                        <select name="state" id="stateList">
-                            <option value="À traiter">À traiter</option>
-                            <option value="En cours">En cours</option>
-                            <option value="Terminé">Terminé</option>
-                        </select>
-                    </td>
-                    <td class="tableUnitDelete">
-                        <button class="actionButtonTwo deleteButton">
-                            <img src="./media/icons/cross.png" alt="cross delete icon" width="12px">
-                            <p>Supprimer</p>
-                        </button>
-                    </td>
-                </tr>
-
-                <tr class="tableUnit">
-                    <td class="tableUnitDesc">
-                        <p class="tableUnitDescTitle">Title</p>
-                        <p class="tableUnitDescDesc">Description</p>
-                    </td>
-                    <td class="tableUnitDate">date</td>
-                    <td class="tableUnitName">developer</td>
-                    <td class="tableunitState">
-                        <select name="state" id="stateList">
-                            <option value="À traiter">À traiter</option>
-                            <option value="En cours">En cours</option>
-                            <option value="Terminé">Terminé</option>
-                        </select>
-                    </td>
-                    <td class="tableUnitDelete">
-                        <button class="actionButtonTwo deleteButton">
-                            <img src="./media/icons/cross.png" alt="cross delete icon" width="12px">
-                            <p>Supprimer</p>
-                        </button>
-                    </td>
-                </tr>
-                
-            </tbody>
+            <tbody class="tableBody"></tbody>
 
         </table>
     </main>
