--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
 
     <header class="header">
 
-        <div class="headerTitle">
+        <a href="index.html" class="headerTitle">
             <img src="./media/icons/bug.ico" alt="bug tracker logo" width="32px">
             <p>Bug Tracker</p>
-        </div>
+        </a>
 
         <ul class="headerActions">
             <button class="actionButton completeListFilter">
