--- a/reportABug.html
+++ b/reportABug.html
@@ -18,10 +18,10 @@
 
     <header class="header">
     
-        <div class="headerTitle">
+        <a href="index.html" class="headerTitle">
             <img src="./media/icons/bug.ico" alt="bug tracker logo" width="32px">
             <p>Bug Tracker</p>
-        </div>
+        </a>
 
         <div class="headerActions">
             <button class="homeButton">
@@ -47,6 +47,9 @@
 
             <label for="desc">Description</label>
             <textarea name="desc" id="desc" cols="40" rows="5"></textarea>
+
+            <label for="submitReport"></label>
+            <input type="submit" value="Valider" id="submitReport" class="actionButtonTwo submitReportBtn">
 
         </form>
 
