--- a/reportABug.html
+++ b/reportABug.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="./styles/reportAbug/reportABug.min.css">
 
     <link rel="icon" type="image/x-icon" href="./media/icons/bug.ico">
+    
+    <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
 
     <script src="./scripts/reportABug.js" defer></script>
 
@@ -36,7 +38,7 @@
     
     </header>
 
-    <main>
+    <main class="main">
 
         <form action="POST" class="reportForm">
 
@@ -47,6 +49,8 @@
 
             <label for="desc">Description</label>
             <textarea name="desc" id="desc" cols="40" rows="5"></textarea>
+
+            <div class="errorCtn"></div>
 
             <label for="submitReport"></label>
             <input type="submit" value="Valider" id="submitReport" class="actionButtonTwo submitReportBtn">
