improve signup regex & setup bug report regex

--- a/reportABug.html
+++ b/reportABug.html
@@ -44,6 +44,8 @@
 
             <legend>Reporter un bug</legend>
 
+            <div class="errorCtn"></div>
+
             <label for="title">Titre</label>
             <input type="text" name="title" id="title">
 
