add state list display

--- a/index.html
+++ b/index.html
@@ -49,18 +49,18 @@
     <div class="stateResume">
         <ul class="stateResumeList">
 
-            <li class="uncompleted">
-                <p>8</p>
+            <li class="all">
+                <p id="allCount">0</p>
                 <img src="./media/icons/bug-32.ico" alt="uncompleted icon" width="18px">
             </li>
 
-            <li class="InProgress">
-                <p>4</p>
+            <li class="inProgress">
+                <p id="inProgressCount">0</p>
                 <img src="./media/icons/inProgress.png" alt="in progress icon" width="24px">
             </li>
             
             <li class="completed">
-                <p>1</p>
+                <p id="completedCount">0</p>
                 <img src="./media/icons/checked.png" alt="completed icon" width="16px">
             </li>
 
