--- a/login.html
+++ b/login.html
@@ -17,7 +17,7 @@
 <body>
 
     <form id="authForm" method="get">
-        <legend>Bug Tracker</legend>
+        <h1>Bug Tracker</h1>
 
         <label for="authFormUsernameLog">Nom d'utilisateur</label>
         <input type="text" name="username" id="authFormUsernameLog" autocomplete="off">
