--- a/signup.html
+++ b/signup.html
@@ -16,7 +16,7 @@
 <body>
     
     <form id="authForm">
-        <legend>Bug Tracker</legend>
+        <h1>Bug Tracker</h1>
         
         <label for="authFormUsernameSignup">Nom d'utilisateur</label>
         <input type="text" name="username" id="authFormUsernameSignup" autocomplete="off">
