--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
         </a>
 
         <div class="headerActions">
-            <button class="actionButton completeListFilter">
+            <button class="actionButton completeListFilter switchButton ">
                 <span>All</span>
             </button>
 
-            <button class="actionButton treatListFilter">
+            <button class="actionButton treatListFilter switchButton">
                 <span>ToDo</span>
             </button>
 
