add some forgotten responsive rules

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
         <a href="index.html" class="headerTitle">
             <img src="./media/icons/bug.ico" alt="bug tracker logo" class="iconL">
-            <span>Bug Tracker</span>
+            <p>Bug Tracker</p>
         </a>
 
         <div class="headerActions">
@@ -34,6 +34,7 @@
 
             <button class="actionButtonTwo addButton">
                 <span>Ajouter</span>
+                <img src="./media/icons/plus.png" alt="add icon" class="iconM">
             </button>
 
             <button class="logoutBtn">
